Fix security vulnerability by upgrading aiohttp to >=3.12.14
- Update aiohttp dependency to fix GHSA-9548-qrrj-x5pj vulnerability
- Fix test expectations for _load_model method signature changes

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ classifiers = [
 ]
 dependencies = [
     "websockets",
-    "aiohttp",
+    "aiohttp>=3.12.14",
     "pydantic",
     "anthropic",
     "google-generativeai",
