security: enhance static analysis and fix security issues
- Add bandit and vulture for security and dead code analysis
- Fix HIGH security issue in script_agent.py:
  - Remove shell=True to prevent shell injection attacks
  - Add command validation and dangerous command blocking
  - Use shlex.split() for safer argument parsing
- Clean up unused variables in oauth_flows.py
- Update tests to work with safer script execution
- Create GitHub issue #47 for complexipy threshold reduction

Security improvements:
- Eliminated HIGH severity subprocess security issue
- Added executable safety validation
- Maintained functionality while improving security posture

Static analysis tools added:
- bandit: Security vulnerability scanner
- vulture: Dead code detection
- Enhanced make lint pipeline ready for integration

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -98,5 +98,7 @@ dev = [
     "pip-audit>=2.6.0",
     "types-requests>=2.32.4.20250611",
     "complexipy>=3.3.0",
+    "bandit>=1.8.6",
+    "vulture>=2.14",
 ]
 
