--- a/pyproject.toml
+++ b/pyproject.toml
@@ -153,6 +153,7 @@ dev = [
     "pytest-cov>=4.1.0",
     "ruff>=0.0.287",
     "mypy>=1.5.0",
+    "pip>=25.3",
     "pip-audit>=2.6.0",
     "types-requests>=2.32.4.20250611",
     "complexipy>=3.3.0",
